@@ -6,6 +6,7 @@ from resources.lib import kodion
 from resources.lib.kodion import items
 from . import utils
 
+
 def response_to_items(provider, context, json_data):
     video_id_dict = {}
     channel_item_dict = {}
@@ -37,6 +38,22 @@ def response_to_items(provider, context, json_data):
 
         utils.update_video_infos(provider, context, video_id_dict)
         utils.update_channel_infos(provider, context, channel_item_dict)
+
+        page = int(context.get_param('page', 1))
+        items_per_page = int(feed.get('openSearch$itemsPerPage', {}).get('$t', 0))
+        total = int(feed.get('openSearch$totalResults', {}).get('$t', 0))
+        if page*items_per_page < total:
+            new_params = {}
+            new_params.update(context.get_params())
+            new_params['start-index'] = (page*items_per_page)+1
+
+            new_context = context.clone(new_params=new_params)
+
+            current_page = int(new_context.get_param('page', 1))
+            next_page_item = items.create_next_page_item(new_context, current_page)
+            next_page_item.set_fanart(provider.get_fanart(new_context))
+            result.append(next_page_item)
+            pass
         pass
     else:
         raise kodion.KodimonException("Couldn't find feed")
