@@ -1,4 +1,5 @@
 1.0.0~alpha25 (2014-10-30)
+ADD: missing pagination for 'My Subscriptions'
 FIX: next page is working again (Watch Later)
 UPD: disabled language (for now) Kodi isn't providing reliable language IDs
 
